--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -27,7 +27,7 @@ stages:
     cfSpace: "dev"
     cfAppName: "invoiceservice"
     cfCredentialsId: "deploy-to-cf"
-    tmsUpload: false
+    tmsUpload: true
 
 steps:
   artifactPrepareVersion:
